fixed logo alignment on mobile

--- a/assets/css/iconfont.css
+++ b/assets/css/iconfont.css
@@ -24,6 +24,7 @@
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'bootstrapThemesCo-icon' !important;
     speak: none;
+    position: center;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
